--- a/app/templates/index_sales.html
+++ b/app/templates/index_sales.html
@@ -1,111 +1,3 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <title>sehati jaya</title>
-    <style>
-      .go-up {
-        display: inline-block;
-      }
-      .go-down {
-        display: inline-block;
-        transform: rotate(180deg);
-      }
-      #btn-back-to-top {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <header class="bg-light text-white mb-4">
-      <div style="height: 3px;background-color:#198754;"></div>
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-            <a class="navbar-brand" href="/">sehati jaya</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                <li class="nav-item px-2">
-                  <a class="nav-link" aria-current="page" href="/">Home</a>
-                </li>
-                <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.username }} ({{ current_user.role }})</a>
-                  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-                    <li><a href="/logout" class="dropdown-item navlink">Logout</a></li>   
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>        
-      </div>
-      <div class="" style="height:2px;background-color:#e0f0e0"></div>
-    </header>
-    <div class="content">
+{% extends 'base_sales.html' %}
 {% block content %}
 {% endblock %}
-    </div>
-    <!-- Back to top button -->
-<button type="button" class="btn btn-danger btn-floating btn-lg rounded-circle  " id="btn-back-to-top">
-  <i class="bi bi-arrow-up-circle"></i>
-</button>
-<div class="container-fluid bg-light border-top py-4 mt-5">
-<div class="container">
-<footer class="row">
-  <div class="col">
-    <p class="text-muted">© 2022 Sehat Berkah Sehati</p>
-  </div>
-</footer>
-</div>
-</div>
-<!-- Explanation -->
-
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="/static/js/pjax.min.js"></script>
-    <script>
-      function DOMReady() {
-
-      }
-      document.addEventListener("DOMContentLoaded", function() {
-        // Init Pjax instance
-        let topbutton = document.getElementById('btn-back-to-top');
-
-        window.onscroll = function () {
-          scrollfunc();
-        }
-        function scrollfunc() {
-          if (document.body.scrollTop > 20 ||
-            document.documentElement.scrollTop > 20
-          ) {
-            topbutton.style.display = 'block';
-          } else {
-            topbutton.style.display = 'none';
-          }
-        }
-
-        topbutton.addEventListener('click', goTop);
-        function goTop() {
-          document.body.scrollTop = 0;
-          document.documentElement.scrollTop = 0;
-        }
-      });
-    </script>
-    {% block js_foot %}
-    {% endblock %}
-  </body>
-</html>
