Filter pada '/api
/api/pelanggan?kota=sragen&plafon=10&q=abadi

/api/obat?q=bodrex

--- a/app/templates/index_sales.html
+++ b/app/templates/index_sales.html
@@ -1,3 +1,14 @@
 {% extends 'base_sales.html' %}
 {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col">
+      Form Pesanan
+      list Pesanan dan statusnya
+      List Tagihan
+      List Pelanggan-nya
+      Prestasiku
+    </div>
+  </div>
+</div>
 {% endblock %}
