--- a/app/templates/pelanggan/index.html
+++ b/app/templates/pelanggan/index.html
@@ -8,6 +8,12 @@
   </div>
   <div class="row">
     <div class="col-md-6">
+      <div class="border">
+        <div class="row">
+          <div class="col p-4">
+            Filter
+          </div>
+        </div>
       <table class="table">
         <thead>
           <tr>
@@ -28,6 +34,7 @@
           {% endfor %}
         </tbody>
       </table>
+    </div>
     </div>
   </div>
 </div>
