--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,11 @@
 {% block content %}
 <div class="container">
   <div class="row">
-    <div class="col">
-      <h1>SBS App</h1>
+    <div class="col-sm-6 border">
+      Pesanan yang jalan
+    </div>
+    <div class="col-sm-6 border">
+      Second
     </div>
   </div>
 </div>
