--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Users / Pengguna</h1>
+      <h1>User</h1>
     </div>
   </div>
   <div class="row">
