Tambah Ganti Passoword, Panduan
Ganti password bisa dilakukan oleh masing-masing user, Manager dapat mengganti password tiap user

Fasilitas create user

Dokumen panduan

--- a/app/templates/absen/index.html
+++ b/app/templates/absen/index.html
@@ -28,7 +28,7 @@
               <label class="btn btn-outline-primary" for="btnlainnya">Lainnya</label>
             </div>
           </form>
-          <button id="myloc" class="px-5 btn btn-primary my-3" disabled>☝️ Hadir</button>
+          <button id="myloc" class="px-4 btn btn-primary my-3 me-2" disabled>☝️ Hadir</button><a class="btn btn-outline-secondary px-3" href="javascript:history.back()"></i>Tidak jadi <i class="bi bi-arrow-90deg-right"></i></a> 
         </div>
         <div id="absen_status" style="display: none" class="p-3 bg-info bg-opacity-10 border border-info rounded">  
         </div>
