--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,10 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
     <title>sehati jaya</title>
     <style>
@@ -45,10 +44,10 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                 <li class="nav-item px-2">
-                  <a class="nav-link" aria-current="page" href="/">Home</a>
+                  <a class="nav-link" aria-current="page" href="/"><i class="bi bi-cup-hot me-2"></i> Home</a>
                 </li>
                 <li class="nav-item dropdown px-2">
-                  <a class="nav-link dropdown-toggle" role="button" id="dropdownRtdMenuLink" href="#" data-bs-toggle="dropdown" aria-expanded="false">Penjualan</a>
+                  <a class="nav-link dropdown-toggle" role="button" id="dropdownRtdMenuLink" href="#" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-box2-heart me-2"></i> Penjualan</a>
                   <ul class="dropdown-menu" araia-labelledby="dropdownRtdMenuLink">
                     <li><a class="dropdown-item navlink" href="/penjualan">Penjualan</a>
                     </li>
@@ -61,7 +60,7 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown px-2">
-                  <a class="nav-link dropdown-toggle" role="button" id="dropdownMapMenuLink" href="#" data-bs-toggle="dropdown" aria-expanded="false">Pembelian</a>
+                  <a class="nav-link dropdown-toggle" role="button" id="dropdownMapMenuLink" href="#" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-bag me-2"></i> Pembelian</a>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMapMenuLink">
                     <li><a href="/pembelian/pesanan" class="dropdown-item navlink">Pesanan</a></li>
                     <li><a href="/pembelian" class="dropdown-item navlink">Pembelian</a></li>
@@ -75,25 +74,26 @@
                 <ul class="navbar-nav">
                 {% if current_user.is_authenticated %}
                 <li class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-fill me-2"></i>Akun</a>
+                  <a href="#" class="nav-link dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person me-2"></i>Akun</a>
                   <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-                    <li><span class="dropdown-item">{{ current_user.username }}</span></li>   
+                    <li><span class="dropdown-item nav-link disabled"><i class="bi bi-person me-2"></i> {{ current_user.username }}</span></li>   
+                    <li><a href="/password" class="dropdown-item nav-link"><i class="bi bi-key me-2"></i> Atur Password</a></li>   
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a href="/absen" class="dropdown-item navlink"><i class="bi bi-hourglass-split me-2"></i>Presensi</a></li>   
+                    <li><a href="/absen" class="dropdown-item nav-link"><i class="bi bi-fingerprint me-2"></i> Presensi</a></li>   
                     {% if current_user.role == 0 %}
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a href="/user" class="dropdown-item navlink">User</a></li>
-                    <li><a href="/pelanggan" class="dropdown-item navlink">Pelanggan</a></li>
-                    <li><a href="/supplier" class="dropdown-item navlink">Supplier</a></li>
+                    <li><a href="/user" class="dropdown-item nav-link"><i class="bi bi-people me-2"></i> User</a></li>
+                    <li><a href="/pelanggan" class="dropdown-item nav-link"><i class="bi bi-shop me-2"></i> Pelanggan</a></li>
+                    <li><a href="/supplier" class="dropdown-item nav-link"><i class="bi bi-house-door me-2"></i> Supplier</a></li>
                     {% endif %}
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a href="/logout" class="dropdown-item navlink">Logout</a></li>   
+                    <li><a href="/logout" class="dropdown-item nav-link"><i class="bi bi-door-open me-2"></i> Logout</a></li>   
                   </ul>
                 </li>
               {% else %}
