--- a/app/templates/base_sales.html
+++ b/app/templates/base_sales.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>sehati jaya</title>
     <style>
       .go-up {
@@ -40,17 +40,18 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                 <li class="nav-item px-2">
-                  <a class="nav-link" aria-current="page" href="/">Home</a>
+                  <a class="nav-link" aria-current="page" href="/"><i class="bi bi-cup-hot me-2"></i> Home</a>
                 </li>
                 <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-fill me-2"></i>Akun</a>
+                  <a href="#" class="nav-link dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person me-2"></i>Akun</a>
                   <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-                    <li class="dropdown-item navlink">{{ current_user.username }}</li>   
-                    <li><hr class="divider"></li>   
-                    <li><a href="/absen" class="dropdown-item navlink"><i class="bi bi-hourglass-split me-3"></i>Presensi</a></li>   
-                    <li><hr class="divider"></li>   
-                    <li><a href="/logout" class="dropdown-item navlink">Logout</a></li>   
+                    <li class="dropdown-item nav-link disabled"><i class="bi bi-person me-2"></i> {{ current_user.username }}</li>   
+                    <li><a href="/password" class="dropdown-item nav-link"><i class="bi bi-key me-2"></i> Atur Password</a></li>   
+                    <li><hr class="dropdown-divider"></li>   
+                    <li><a href="/absen" class="dropdown-item nav-link"><i class="bi bi-fingerprint me-2"></i> Presensi</a></li>   
+                    <li><hr class="dropdown-divider"></li>   
+                    <li><a href="/logout" class="dropdown-item nav-link"><i class="bi bi-door-open me-2"></i> Logout</a></li>   
                   </ul>
                 </li>
               </ul>
